--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,6 +1,6 @@
 .about-project {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 5px auto;
   padding: 106px 70px;
 }
 
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 425px) {
   .about-project {
-    padding: 67px 18px;
+    padding: 70px 18px;
   }
 }
 
@@ -50,7 +50,7 @@
 @media screen and (max-width: 425px) {
   .about-project__column {
     flex-direction: column;
-    margin: 60px 0;
+    margin: 63px 0;
     gap: 57px;
   }
 }
@@ -114,7 +114,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: 228px auto;
-  gap: 14px 0;
+  gap: 12px 0;
 }
 
 @media screen and (max-width: 768px) {
@@ -135,7 +135,7 @@
   padding-top: 9px;
   width: 100%;
   max-width: 228px;
-  min-height: 27px;
+  min-height: 34px;
   background: #3ddc84;
   color: #000;
   text-align: center;
