--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,9 @@
   }
   
   .page__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     min-height: 100vh;
     max-width: 1280px;
