--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -107,12 +107,14 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  margin: 79px 70px 20px 70px;
+  padding: 6px 70px 20px 70px;
+  max-width: 1280px;
+  width: 100%;
 }
 
 .footer__description {
   margin: 0;
-  padding-bottom: 20px;
+  padding-bottom: 17px;
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
@@ -124,6 +126,8 @@
 .footer__container {
   display: flex;
   margin-top: 20px;
+  justify-content: space-between;
+  
 }
 
 .footer__copyright {
@@ -135,6 +139,11 @@
   flex: 1 1 auto;
 }
 
+.footer__links {
+  grid-area: links;
+  display: flex;
+}
+
 .footer__link {
   margin: 0 0 0 20px;
   font-weight: 400;
@@ -143,20 +152,24 @@
   color: #fff;
   text-decoration: none;
 }
+.footer__list-item{
+  list-style: none;
+}
 
 .footer__link:hover {
   color: #a0a0a0;
 }
 
 @media screen and (max-width: 1023px) {
-  .footer {
-    margin: 79px 30px 20px 30px;
+  .footer__container {
+    margin: 19px -40px 20px -40px;
   }
 }
 
 @media screen and (max-width: 576px) {
   .footer {
-    margin: 79px 10px 10px 10px;
+    margin: 87px 10px 10px 10px;
+    padding: 0;
   }
 
   .footer__description {
@@ -177,6 +190,14 @@
     color: #a0a0a0;
     order: 10;
     margin-top: 18px;
+  }
+
+  .footer__links{
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer__list-item{
+    margin-bottom: 9px;
   }
 
   .footer__link {
