--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,38 +1,35 @@
 .header {
   position: relative;
+  box-sizing: border-box;
   padding: 0 70px;
   min-height: 74px;
   display: flex;
   align-items: center;
   background: rgba(32, 32, 32, 1);
-  width: 1280px;
+  max-width: 1280px;
+  justify-content: space-between;
+  width: 100%;
 }
 
-@media screen and (max-width: 1279px) {
-  .header {
-    width: 100vw;
-  }
-}
 
 .header__links {
-  margin-left: auto;
+ 
   display: flex;
-  gap: 30px;
+  gap: 28px;
   align-items: center;
 }
 
 .header__links_films {
   display: flex;
   gap: 21px;
-  position: absolute;
-  left: 42%;
 }
 
 .header__button {
   min-height: 32px;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: 16px;
   letter-spacing: 0.03em;
   display: flex;
   align-items: center;
@@ -43,7 +40,7 @@
 
 .header__button_active {
   font-weight: 500;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 18px;
   letter-spacing: 0.03em;
   display: flex;
@@ -82,7 +79,8 @@
   display: flex;
   justify-content: center;
   padding-top: 8px;
-  margin-left: 364px;
+  margin-left: -63px;
+  
 }
 
 .header__account-image {
@@ -148,5 +146,8 @@
 
   .header__button-green {
     min-width: 54px;
+  }
+  .header__button-green:hover {
+    opacity: 0.6;
   }
 }
