--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -8,7 +8,6 @@
 
 .card__image {
   margin: 5px 0 0;
-  background-image: url(../../images/aboutme.jpg);
   padding: 0;
   background-size: cover;
   background-repeat: no-repeat;
@@ -16,6 +15,7 @@
   width: 100%;
   height: 201px;
   border-radius: 6px;
+  object-fit: cover;
 }
 
 .card__wrapper {
@@ -105,6 +105,9 @@
   .card__image {
     margin: -2px 0 0;
     height: 190px;
+  }
+  .card__time {
+    padding: 3px 0 0 0;
   }
 }
 
