--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,5 +1,6 @@
 .cards {
   flex: 1 1 auto;
+  margin-bottom: 76px;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -48,32 +49,39 @@
 @media screen and (max-width: 1023px) {
   .cards__list {
     padding: 0;
-    margin: 81px auto -37px;
+    margin: 84px auto -4px;
     grid-template-columns: repeat(2, 339px);
     gap: 30px 30px;
   }
 
   .cards__button-container {
-    margin-top: 117px;
-    margin-bottom: 81px;
+    margin-top: 79px;
+    margin-bottom: 42px;
+  }
+  .cards{
+    margin-bottom: 111px;
+  }
+  .cards__button{
+    margin: -36px 0 3px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 766px) {
   .card {
     height: 237px;
   }
   .cards__list {
     margin: 50px auto 10px;
     grid-template-columns: repeat(1, 300px);
-    gap: 18px;
+    gap: 13px;
   }
 
   .cards__button {
     width: 240px;
+    margin: -36px 0 28px;
   }
 
   .cards__button-container {
-    margin: 70px 0 80px;
+    margin: 61px 26px -69px;
   }
 }
