--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,5 +1,5 @@
 .profile {
-  padding: 74px 0 70px 0;
+  padding: 57px 26px 70px 0;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -71,11 +71,12 @@
 
 .profile__button-save {
   background: rgba(32, 32, 32, 1);
+  margin-left: 23px;
   border-radius: 3px;
-  margin-top: 213px;
+  margin-top: 192px;
   min-height: 45px;
-  font-weight: 500;
-  font-size: 14px;
+  font-weight: 400;
+  font-size: 13px;
   line-height: 17px;
   display: flex;
   align-items: center;
@@ -86,8 +87,12 @@
   cursor: pointer;
 }
 
+.profile__button-save:hover {
+  opacity: 0.6;
+}
+
 .profile__link {
-  margin-top: 16px;
+  margin-left: 25px;
   min-height: 16px;
   font-weight: 500;
   font-size: 13px;
@@ -99,9 +104,13 @@
   cursor: pointer;
 }
 
+.profile__link:hover {
+  opacity: 0.6;
+}
+
 @media screen and (max-width: 1023px) {
   .profile {
-    padding-top: 236px;
+    padding-top: 220px;
     padding-bottom: 269px;
   }
 
@@ -110,13 +119,13 @@
   }
 
   .profile__button-save {
-    margin-top: 193px;
+    margin-top: 180px;
   }
 }
 
 @media screen and (max-width: 576px) {
   .profile {
-    padding: 70px 30px 40px 30px;
+    padding: 55px 30px 40px 30px;
   }
 
   .profile__welcome {
@@ -124,17 +133,20 @@
   }
 
   .profile__input {
-    width: 150px;
+    width: 225px;
   }
 
   .profile__button-save {
-    margin-top: 362px;
+    margin-top: 348px;
     font-size: 12px;
     line-height: 15px;
+    margin-left: 0;
   }
 
   .profile__link {
     font-size: 12px;
     line-height: 15px;
+    margin: 0;
   }
+  
 }
