--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,27 +1,41 @@
 .search {
-  margin: 70px 70px 0;
+  margin: 80px 70px 0;
   display: flex;
   flex-direction: column;
   position: relative;
   border-bottom: 1px solid #424242;
 }
 
+.search__form {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
 @media screen and (max-width: 768px) {
   .search {
-    padding: 57px 30px 0 30px;
+    padding: 0 30px;
+    margin: 81px 0 0;
   }
+ 
 }
 
 @media screen and (max-width: 425px) {
   .search {
-    padding: 57px 14px 0 14px;
+    padding: 0 14px;
+    margin: 77px 0 0;
   }
+  
 }
 
 .search__form {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+}
+.search__container{
+  display: flex;
+  flex-direction:column;
 }
 
 .search__form-input {
