--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,6 @@
 .navigation {
   display: none;
+  width: 100%;
 }
 
 @media screen and (max-width: 1023px) {
@@ -33,8 +34,8 @@
 
   .navigation__close-button {
     position: absolute;
-    top: 22px;
-    right: 22px;
+    top: 27px;
+    right: 29px;
     background-image: url(../../images/icon-menu-close.svg);
     width: 22px;
     height: 22px;
@@ -54,7 +55,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 22px;
+    gap: 29px;
   }
 
   .navigation__link {
@@ -98,7 +99,7 @@
 
 @media screen and (max-width: 576px) {
   .navigation__menu {
-    padding: 144px 10px 46px 10px;
+    padding: 144px 10px 110px 10px;
     width: 100%;
   }
 
@@ -107,6 +108,13 @@
   }
 
   .navigation__links {
-    gap: 15px;
+    gap: 26px;
+  }
+  .navigation__account-button {
+    padding-top: 10px;
+  }
+  .navigation__close-button{
+    top: 18px;
+    right: 20px;
   }
 }
