--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,9 +1,9 @@
 .profile {
-  padding: 57px 26px 70px 0;
+  padding: 57px 0 70px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  max-width: 410px;
+  width: 412px;
   box-sizing: border-box;
 }
 
@@ -71,7 +71,7 @@
 
 .profile__button-save {
   background: rgba(32, 32, 32, 1);
-  margin-left: 23px;
+  
   border-radius: 3px;
   margin-top: 192px;
   min-height: 45px;
@@ -92,7 +92,7 @@
 }
 
 .profile__link {
-  margin-left: 25px;
+  
   min-height: 16px;
   font-weight: 500;
   font-size: 13px;
@@ -126,6 +126,7 @@
 @media screen and (max-width: 576px) {
   .profile {
     padding: 55px 30px 40px 30px;
+    width: 320px;
   }
 
   .profile__welcome {
