--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,10 @@
 
 body {
   max-width: 1280px;
-  margin: 0;
+  margin: auto;
   background-color: #202020;
   font-family: 'Inter', Arial, sans-serif;
   color: #FFF;
+  align-items: center;
 }
-/* * { outline: 1px solid red; } */
+* { outline: 1px solid red; }
