--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -32,6 +32,22 @@
   min-height: 30px;
   cursor: text;
 }
+.profile__button-save_disabled {
+  background: rgb(133, 105, 105);
+  border-radius: 3px;
+  margin-top: 192px;
+  min-height: 45px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: none;
+  color: #fff;
+ 
+}
 
 .profile__input {
   margin: 0;
