--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -19,6 +19,15 @@
 .form-container__button_disabled {
   background-color: #b3aaaa;
   color: #221c1c;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  height: 45px;
+  line-height: 17px;
+  margin-top: auto;
+  text-align: center;
 }
 
 .form__title {
